--- a/DevilDaggersAssetCore/DevilDaggersAssetCore.csproj
+++ b/DevilDaggersAssetCore/DevilDaggersAssetCore.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <EmbeddedResource Include="Content\Audio.json" />
+    <EmbeddedResource Include="Content\Audio\Audio.json" />
   </ItemGroup>
 
   <ItemGroup>
