--- a/DevilDaggersAssetCore/DevilDaggersAssetCore.csproj
+++ b/DevilDaggersAssetCore/DevilDaggersAssetCore.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
+    <PackageReference Include="System.Drawing.Common" Version="4.5.1" />
   </ItemGroup>
 
 </Project>
