--- a/DevilDaggersAssetCore/DevilDaggersAssetCore.csproj
+++ b/DevilDaggersAssetCore/DevilDaggersAssetCore.csproj
@@ -7,7 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <EmbeddedResource Include="Content\Audio\Audio.json" />
+    <EmbeddedResource Include="Content\audio\Audio.json" />
+    <EmbeddedResource Include="Content\core\Shaders.json" />
+    <EmbeddedResource Include="Content\dd\Model Bindings.json" />
+    <EmbeddedResource Include="Content\dd\Models.json" />
+    <EmbeddedResource Include="Content\dd\Shaders.json" />
+    <EmbeddedResource Include="Content\dd\Textures.json" />
   </ItemGroup>
 
   <ItemGroup>
