--- a/DevilDaggersAssetEditor/packages.config
+++ b/DevilDaggersAssetEditor/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="log4net" version="2.0.8" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net461" />
   <package id="System.Drawing.Common" version="4.5.1" targetFramework="net461" />
   <package id="WindowsAPICodePack-Core" version="1.1.2" targetFramework="net461" />
