--- a/DevilDaggersAssetCore/DevilDaggersAssetCore.csproj
+++ b/DevilDaggersAssetCore/DevilDaggersAssetCore.csproj
@@ -13,6 +13,7 @@
     <EmbeddedResource Include="Content\dd\Models.json" />
     <EmbeddedResource Include="Content\dd\Shaders.json" />
     <EmbeddedResource Include="Content\dd\Textures.json" />
+    <EmbeddedResource Include="Content\particle\Particles.json" />
   </ItemGroup>
 
   <ItemGroup>
