--- a/DevilDaggersAssetCore/DevilDaggersAssetCore.csproj
+++ b/DevilDaggersAssetCore/DevilDaggersAssetCore.csproj
@@ -9,10 +9,12 @@
   <ItemGroup>
     <EmbeddedResource Include="Content\audio\Audio.json" />
     <EmbeddedResource Include="Content\core\Shaders.json" />
+    <EmbeddedResource Include="Content\DDOrder.json" />
     <EmbeddedResource Include="Content\dd\Model Bindings.json" />
     <EmbeddedResource Include="Content\dd\Models.json" />
     <EmbeddedResource Include="Content\dd\Shaders.json" />
     <EmbeddedResource Include="Content\dd\Textures.json" />
+    <EmbeddedResource Include="Content\ModelClosures.json" />
     <EmbeddedResource Include="Content\particle\Particles.json" />
   </ItemGroup>
 
