--- a/DevilDaggersAssetCore/DevilDaggersAssetCore.csproj
+++ b/DevilDaggersAssetCore/DevilDaggersAssetCore.csproj
@@ -19,6 +19,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="log4net" Version="2.0.8" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
     <PackageReference Include="System.Drawing.Common" Version="4.5.1" />
   </ItemGroup>
